# GEMSEC

./: .flake8  .gitignore  .travis.yml  MANIFEST.in  README.md  setup.cfg  setup.py  tox.ini
output/assignments/: politician.json
output/cluster_means/: politician_means.csv
output/embeddings/: politician_embedding.csv
src/: calculation_helper.py  embedding_clustering.py  helper.py  layers.py  model.py  param_parser.py  parser.py  print_and_read.py
src/gemsec/: calculation_helper.py  embedding_clustering.py  model.py  print_and_read.py
tests/: test_import.py
