##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = gemsec
version = 0.0.1-dev
url = https://github.com/benedekrozemberczki/GEMSEC
author = Benedek Rozemberczki
author_email = benedek.rozemberczki@gmail.com
maintainer = Benedek Rozemberczki
maintainer_email = benedek.rozemberczki@gmail.com
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
license = MIT
description = Reference implementation of 'GEMSEC: Graph Embedding with Self Clustering'
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    Graph Embeddings

[options]
zip_safe = False
install_requires =
    networkx==1.11
    numpy
    pandas
    tqdm
    tensorflow-gpu
    jsonschema
    texttable
    python-louvain
    scikit-learn
python_requires = >=3.5
packages = find:
package_dir =
    = src

[options.entry_points]
console_scripts =
    gemsec = gemsec.embedding_clustering:main

[options.packages.find]
where = src

# Configuring bdist_wheel
[bdist_wheel]
python-tag = py35
